--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
-  <base href="/huahininfo/">
+  <base href="/HuahinApp/">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
@@ -30,9 +30,9 @@
   <link rel="icon" type="image/png" href="favicon.png"/>
 
   <title>flutter_application_1</title>
-  <link rel="manifest" href="/huahininfo/manifest.json">
+  <link rel="manifest" href="/HuahinApp/manifest.json">
 </head>
 <body>
-  <script src="/huahininfo/flutter_bootstrap.js" async></script>
+  <script src="/HuahinApp/flutter_bootstrap.js" async></script>
 </body>
 </html>
